Don't require metadata.json for installing package

BUG: 472925